# Zugswan

./: CMakeLists.txt  CMakePresets.json
Engine/: CMakeLists.txt  Perft.cpp
Engine/include/: Board.h  Engine.h  Game.h  GameState.h  MoveGen.h  Perft.h  Piece.h  Tables.h  board.hpp  engine.hpp  fixedvector.hpp  gamestate.hpp  move.hpp  movegen.hpp  perft.hpp  search.hpp  tables.hpp  transposetable.hpp  uci.hpp
Engine/src/: Board.cpp  Engine.cpp  Game.cpp  GameState.cpp  MoveGen.cpp  Tables.cpp  board.cpp  engine.cpp  gamestate.cpp  main.cpp  movegen.cpp  search.cpp  tables.cpp  transposetable.cpp  uci.cpp
Engine/tests/: Perft.cpp  PerftBulk.cpp  perft.cpp
GUI/include/: Window.h
GUI/src/: Window.cpp
Rendering/include/: Renderer.h
Rendering/src/: Renderer.cpp
